# melkior

./: CMakeLists.txt  README.md  vulkaninfo-x86.txt
.cache/clangd/index/: blur_example_benchmark.cpp.9BCB02521249C548.idx  engine.cpp.A21B86AA6B53FD67.idx  engine.hpp.700672987D6FCA82.idx  main.cpp.4FAAE471E934571C.idx  main.cpp.76F5D64BB3F58A38.idx  step1.cpp.6F327A5C3BA27C62.idx  step2.cpp.4C08004B6A447D56.idx  step3.cpp.A41883070DB1E8B7.idx
benchmarks/: CMakeLists.txt  blur_example_benchmark.cpp
cmake/: toolchain-rpi5.cmake
shaders/: compute.spv
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/include/: engine.hpp
src/engine/src/: engine.cpp
src/shaders/: compute.comp
src/tensor_ops/: CMakeLists.txt
src/tensor_ops/elementwise/: CMakeLists.txt
src/tensor_ops/elementwise/clear/: CMakeLists.txt  main.cpp
src/tensor_ops/elementwise/clear/shaders/: clear.comp
src/vulkan_intro/: CMakeLists.txt  step1.cpp  step2.cpp  step3.cpp
